--- a/circle.yml
+++ b/circle.yml
@@ -3,9 +3,10 @@ machine:
     CLOUDSDK_COMPUTE_ZONE: us-central1-b
     CLOUDSDK_CORE_DISABLE_PROMPTS: 1
     CLOUDSDK_PYTHON_SITEPACKAGES: 0
-    GO15VENDOREXPERIMENT: 1
-    PATH: /home/ubuntu/google-cloud-sdk/bin:/home/ubuntu/go1.5/bin:$PATH
-    GOROOT: /home/ubuntu/go1.5
+    GOVERSION: 1.6.2
+    GOPATH: /home/ubuntu/go_workspace
+    GOROOT: /home/ubuntu/go
+    PATH: /home/ubuntu/google-cloud-sdk/bin:/home/ubuntu/go/bin:$GOPATH/bin:$PATH
 
   python:
     version: 2.7.3
@@ -15,7 +16,7 @@ machine:
 dependencies:
   cache_directories:
     - ~/google-cloud-sdk
-    - ~/go1.5
+    - ~/go
     - ~/bin
 
   pre:
