--- a/circle.yml
+++ b/circle.yml
@@ -1,12 +1,10 @@
+---
 machine:
   environment:
-    CLOUDSDK_COMPUTE_ZONE: us-central1-b
-    CLOUDSDK_CORE_DISABLE_PROMPTS: 1
-    CLOUDSDK_PYTHON_SITEPACKAGES: 0
-    GO15VENDOREXPERIMENT: 1
-    PATH: /home/ubuntu/google-cloud-sdk/bin:/home/ubuntu/go1.5/bin:$PATH
-    GOROOT: /home/ubuntu/go1.5
-
+    GOVERSION: 1.6.2
+    GOPATH: /home/ubuntu/go_workspace
+    GOROOT: /home/ubuntu/go
+    PATH: /home/ubuntu/go/bin:$GOPATH/bin:/home/ubuntu/bin:$PATH
   python:
     version: 2.7.3
   services:
@@ -14,17 +12,21 @@ machine:
 
 dependencies:
   cache_directories:
-    - ~/google-cloud-sdk
-    - ~/go1.5
+    - ../go-workspace
+    - ../go
+    - vendor
     - ~/bin
 
-  pre:
-    - make circle_deps
+  override:
+    - make deps-circle
+    - make deps
+    - make deps-coverage
 
 test:
+  override:
+    - make test
   post:
-    ## set COVERALLS_TOKEN environment variable on circleci.com
-    - make coveralls
+    - make test-coveralls
 
 general:
   artifacts:
@@ -34,7 +36,5 @@ deployment:
   prod:
     branch:
       - master
-      - deploy
     commands:
-      - make gce
-      - make deploy
+      - make release
