attempting to solve issue wher $(CURDUR) goes away

--- a/circle.yml
+++ b/circle.yml
@@ -18,8 +18,10 @@ dependencies:
     - vendor
     - ~/bin
 
-  pre:
+  override:
     - make deps-circle
+    - make deps
+    - make deps-coverage
 
 test:
   post:
